@@ -1,5 +1,7 @@
 
 version XXXX - XXXX
+ . Director: if in landscape mode, tells the application to be in landscape mode too
+ . Label: supports changing it's string
  . performance: Actions are not cloned. If you want to reuse them, clone them manually using the method 'copy'
  . CallFunc, CallFuncN using performSelector instead of NSInvocator
  . Added color suppport for "TextureNode"
